# simple_lang

./: .clang-format  .clang-tidy  .gitignore  BuiltinSymbols.cpp  BuiltinSymbols.h  CMakeLists.txt  CompilerFronted.cpp  CompilerFronted.h  DeclarationCollector.cpp  DeclarationCollector.h  GRAMMAR.md  Interpreter.cpp  Interpreter.h  KaleidoscopeJIT.h  Lexer.cpp  Lexer.h  NodePrinter.cpp  NodePrinter.h  Parser.cpp  Parser.h  README.md  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SymbolTable.cpp  SymbolTable.h  Util.h  main.cpp
ast/: ArrayNode.cpp  ArrayNode.h  AssignmentNode.cpp  AssignmentNode.h  BaseNode.h  BinOpNode.cpp  BinOpNode.h  BlockNode.cpp  BlockNode.h  BooleanNode.cpp  BooleanNode.h  CallFunctionNode.cpp  CallFunctionNode.h  CommentNode.cpp  CommentNode.h  CondBranch.h  DeclarationNode.cpp  DeclarationNode.h  FieldAccessNode.cpp  FieldAccessNode.h  ForLoopNode.cpp  ForLoopNode.h  FunctionCallNode.cpp  FunctionCallNode.h  FunctionNode.cpp  FunctionNode.h  IdentNode.cpp  IdentNode.h  IfStatement.cpp  IfStatement.h  IfStatementStatement.cpp  IfStatementStatement.h  IndexAccessNode.cpp  IndexAccessNode.h  LoopCondNode.cpp  LoopCondNode.h  MemberAccessNode.cpp  MemberAccessNode.h  MethodCallNode.cpp  MethodCallNode.h  (+28 more)
files/: example
ir/: ArrayIRType.cpp  ArrayIRType.h  ArrayNodeGenerator.cpp  ArrayNodeGenerator.h  AssignmentNodeGenerator.cpp  AssignmentNodeGenerator.h  BinOpNodeGenerator.cpp  BinOpNodeGenerator.h  BlockNodeGenerator.cpp  BlockNodeGenerator.h  BooleanIRType.cpp  BooleanIRType.h  BooleanNodeGenerator.cpp  BooleanNodeGenerator.h  ByteIRType.cpp  ByteIRType.h  CharIRType.cpp  CharIRType.h  DeclarationNodeGenerator.cpp  DeclarationNodeGenerator.h  DoubleIRType.cpp  DoubleIRType.h  DoubleType.cpp  DoubleType.h  FieldAccessNodeGenerator.cpp  FieldAccessNodeGenerator.h  FunctionCallNodeGenerator.cpp  FunctionCallNodeGenerator.h  FunctionNodeGenerator.cpp  FunctionNodeGenerator.h  IRCodegen.cpp  IRCodegen.h  IRGenerator.h  IRType.cpp  IRType.h  IRTypeFactory.cpp  IRTypeFactory.h  IRValue.cpp  IRValue.h  IdentNodeGenerator.cpp  (+44 more)
ir/type/: ArrayIRType.cpp  ArrayIRType.h  BooleanIRType.cpp  BooleanIRType.h  ByteIRType.cpp  ByteIRType.h  CharIRType.cpp  CharIRType.h  DoubleIRType.cpp  DoubleIRType.h  IRType.cpp  IRType.h  IntIRType.cpp  IntIRType.h  NumericIRType.cpp  NumericIRType.h  StrIRType.cpp  StrIRType.h  StructIRType.cpp  StructIRType.h  VoidIRType.cpp  VoidIRType.h
tests/: CMakeLists.txt  main.cpp
tests/ast/: CMakeLists.txt  main.cpp
tests/ir/: CMakeLists.txt  main.cpp
type/: ArrayType.cpp  ArrayType.h  BoolType.cpp  BoolType.h  ByteType.cpp  ByteType.h  CharType.cpp  CharType.h  FunctionType.cpp  FunctionType.h  NumericType.cpp  NumericType.h  PointerType.cpp  PointerType.h  ReferenceType.cpp  ReferenceType.h  StrType.cpp  StrType.h  StructType.cpp  StructType.h  Type.cpp  Type.h  TypeFactory.cpp  TypeFactory.h  TypePtrFwd.h  UnresolvedType.cpp  UnresolvedType.h  VoidType.cpp  VoidType.h
